--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,18 @@ h2 {
 .absolute {
   position: absolute; }
 
+.push {
+  left: 100%; }
+
+.pull {
+  right: 100%; }
+
+.is-right {
+  order: 2; }
+
+.is-left {
+  order: 1; }
+
 a.btn span {
   position: absolute;
   top: 25px;
@@ -156,6 +168,8 @@ h1.huge-font {
     font-size: 2em; }
   #intro img {
     padding-top: 2em; }
+  #intro h1 {
+    line-height: 1; }
 
 #about, #work {
   background-color: white;
@@ -163,30 +177,50 @@ h1.huge-font {
   #about h1.huge-font, #work h1.huge-font {
     color: whitesmoke; }
   #about .img-wrap, #work .img-wrap {
-    width: 100%;
-    left: 6vh;
+    height: 400px;
+    Width: 400px;
+    left: 0;
     position: relative; }
   #about .img-bg, #work .img-bg {
     background-image: linear-gradient(-45deg, #FFF6A8 0%, #f3c08e 25%, #e098a9 50%, #8d93d2 75%, #3bcbd2 100%);
-    height: 400px;
-    Width: 400px;
+    width: 100%;
+    height: 100%;
     position: absolute;
     z-index: 1;
     left: 20px;
     top: 20px; }
   #about .img-top, #work .img-top {
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 2; }
   #about .btn-container, #work .btn-container {
     margin-top: 1em;
-    position: relative; }
+    position: relative;
+    width: 206px; }
   #about .btn-background, #work .btn-background {
     position: relative;
     background: url(../img/icon-6.png) no-repeat;
     height: 100px;
-    margin-top: 1.2em; }
+    margin-top: 1.2em;
+    margin-right: auto;
+    margin-left: auto; }
+  #about .column.text, #work .column.text {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    min-height: 24em;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
 
 #skills {
   background-color: #3CD0D8;
@@ -223,9 +257,12 @@ h1.huge-font {
   border-image-outset: 20px; }
   #work div.project1, #work div.project2, #work div.project3 {
     position: relative; }
+  #work .column.text h3 {
+    font-family: "parabolaregular", cursive;
+    font-size: 2em;
+    padding-bottom: 0.7em; }
   #work div.project2 .img-wrap {
-    width: 100%;
-    right: 6vh; }
+    left: 12vh; }
   #work .columns {
     min-height: 500px; }
 
@@ -290,222 +327,244 @@ h1.huge-font {
     float: none; }
 
 .p-1 {
-  width: 10px;
+  -webkit-box-shadow: 0 0 30px 30px #F2BA82;
+  -moz-box-shadow: 0 0 30px 30px #F2BA82;
+  box-shadow: 0 0 30px 30px #F2BA82;
   height: 10px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
+  width: 10px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=20);
   opacity: 0.2;
-  -webkit-box-shadow: 0 0 50px 30px #F2BA82;
-  -moz-box-shadow: 0 0 50px 30px #F2BA82;
-  box-shadow: 0 0 50px 30px #F2BA82;
   background-color: #F2BA82; }
 
 .p-2 {
-  width: 154px;
-  height: 154px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=15);
+  -webkit-box-shadow: 0 0 25px 15px #9298DD;
+  -moz-box-shadow: 0 0 25px 15px #9298DD;
+  box-shadow: 0 0 25px 15px #9298DD;
+  height: 155px;
+  width: 155px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=15);
   opacity: 0.15;
-  -webkit-box-shadow: 0 0 50px 30px #9298DD;
-  -moz-box-shadow: 0 0 50px 30px #9298DD;
-  box-shadow: 0 0 50px 30px #9298DD;
   background-color: #9298DD; }
 
-.p-2 {
-  width: 154px;
-  height: 154px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=15);
-  opacity: 0.15;
-  -webkit-box-shadow: 0 0 50px 30px #D974DB;
-  -moz-box-shadow: 0 0 50px 30px #D974DB;
-  box-shadow: 0 0 50px 30px #D974DB;
+.p-3 {
+  -webkit-box-shadow: 0 0 15px 15px #D974DB;
+  -moz-box-shadow: 0 0 15px 15px #D974DB;
+  box-shadow: 0 0 15px 15px #D974DB;
+  height: 128px;
+  width: 128px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=25);
+  opacity: 0.25;
   background-color: #D974DB; }
 
 .p-4 {
-  width: 90px;
-  height: 90px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=25);
-  opacity: 0.25;
   -webkit-box-shadow: 0 0 40px 30px #3CD0D8;
   -moz-box-shadow: 0 0 40px 30px #3CD0D8;
   box-shadow: 0 0 40px 30px #3CD0D8;
+  height: 100px;
+  width: 100px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=25);
+  opacity: 0.25;
   background-color: #3CD0D8; }
 
 .p-5 {
-  width: 55px;
-  height: 55px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=10);
-  opacity: 0.1;
   -webkit-box-shadow: 0 0 10px 20px #F2A4BF;
   -moz-box-shadow: 0 0 10px 20px #F2A4BF;
   box-shadow: 0 0 10px 20px #F2A4BF;
+  height: 55px;
+  width: 55px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=20);
+  opacity: 0.2;
   background-color: #F2A4BF; }
 
 .p-6 {
-  width: 52px;
   height: 52px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
-  opacity: 0.2;
+  width: 52px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=35);
+  opacity: 0.35;
   background-color: #FFF6B5; }
 
 .p-7 {
-  width: 30px;
-  height: 30px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
+  -webkit-box-shadow: 0 0 2px 7px #F2BA82;
+  -moz-box-shadow: 0 0 2px 7px #F2BA82;
+  box-shadow: 0 0 2px 7px #F2BA82;
+  height: 32px;
+  width: 32px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=20);
   opacity: 0.2;
-  -webkit-box-shadow: 0 0 2px 3px apricot;
-  -moz-box-shadow: 0 0 2px 3px apricot;
-  box-shadow: 0 0 2px 3px apricot;
   background-color: #F2BA82; }
 
 .p-8 {
-  width: 5px;
-  height: 5px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=10);
-  opacity: 0.1;
-  -webkit-box-shadow: 0 0 30px 17px #F2A4BF;
-  -moz-box-shadow: 0 0 30px 17px #F2A4BF;
-  box-shadow: 0 0 30px 17px #F2A4BF;
+  -webkit-box-shadow: 0 0 5px 17px #F2A4BF;
+  -moz-box-shadow: 0 0 5px 17px #F2A4BF;
+  box-shadow: 0 0 5px 17px #F2A4BF;
+  height: 7px;
+  width: 7px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=15);
+  opacity: 0.15;
   background-color: #F2A4BF; }
 
 .p-9 {
-  width: 60px;
-  height: 60px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=10);
-  opacity: 0.1;
-  -webkit-box-shadow: 0 0 1px 1px #9298DD;
-  -moz-box-shadow: 0 0 1px 1px #9298DD;
-  box-shadow: 0 0 1px 1px #9298DD;
-  background-color: #9298DD; }
+  -webkit-box-shadow: 0 0 2px 2px #3CD0D8;
+  -moz-box-shadow: 0 0 2px 2px #3CD0D8;
+  box-shadow: 0 0 2px 2px #3CD0D8;
+  height: 58px;
+  width: 58px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=15);
+  opacity: 0.15;
+  background-color: #3CD0D8; }
 
 .p-10 {
-  width: 1px;
-  height: 1px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
-  opacity: 0.2;
   -webkit-box-shadow: 0 0 10px 5px #FFF6B5;
   -moz-box-shadow: 0 0 10px 5px #FFF6B5;
   box-shadow: 0 0 10px 5px #FFF6B5;
+  height: 3px;
+  width: 3px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=45);
+  opacity: 0.45;
   background-color: #FFF6B5; }
 
 .p-11 {
-  width: 159px;
+  -webkit-box-shadow: 0 0 1px 1px white;
+  -moz-box-shadow: 0 0 1px 1px white;
+  box-shadow: 0 0 1px 1px white;
   height: 159px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=10);
+  width: 159px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=10);
   opacity: 0.1;
-  -webkit-box-shadow: 0 0 1px 0px white;
-  -moz-box-shadow: 0 0 1px 0px white;
-  box-shadow: 0 0 1px 0px white;
-  background-color: #fff; }
+  background-color: white; }
 
 .p-12 {
-  width: 10px;
+  -webkit-box-shadow: 0 0 10px 20px white;
+  -moz-box-shadow: 0 0 10px 20px white;
+  box-shadow: 0 0 10px 20px white;
   height: 10px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=8);
-  opacity: 0.08;
-  -webkit-box-shadow: 0 0 30px 20px white;
-  -moz-box-shadow: 0 0 30px 20px white;
-  box-shadow: 0 0 30px 20px white;
-  background-color: #fff; }
+  width: 10px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=30);
+  opacity: 0.3;
+  background-color: white; }
 
 .p-13 {
-  width: 80px;
+  -webkit-box-shadow: 0 0 5px 5px #F2A4BF;
+  -moz-box-shadow: 0 0 5px 5px #F2A4BF;
+  box-shadow: 0 0 5px 5px #F2A4BF;
   height: 80px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=8);
-  opacity: 0.08;
-  -webkit-box-shadow: 0 0 1px 1px #F2A4BF;
-  -moz-box-shadow: 0 0 1px 1px #F2A4BF;
-  box-shadow: 0 0 1px 1px #F2A4BF;
+  width: 80px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=15);
+  opacity: 0.15;
   background-color: #F2A4BF; }
 
 .p-14 {
-  width: 50px;
-  height: 50px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
-  opacity: 0.2;
   -webkit-box-shadow: 0 0 30px 15px #3CD0D8;
   -moz-box-shadow: 0 0 30px 15px #3CD0D8;
   box-shadow: 0 0 30px 15px #3CD0D8;
+  height: 48px;
+  width: 48px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=15);
+  opacity: 0.15;
   background-color: #3CD0D8; }
 
 .p-15 {
-  width: 235px;
-  height: 235px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=5);
+  -webkit-box-shadow: 0 0 30px 18px #FFF6B5;
+  -moz-box-shadow: 0 0 30px 18px #FFF6B5;
+  box-shadow: 0 0 30px 18px #FFF6B5;
+  height: 5px;
+  width: 5px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=5);
   opacity: 0.05;
-  -webkit-box-shadow: 0 0 30px 15px #9298DD;
-  -moz-box-shadow: 0 0 30px 15px #9298DD;
-  box-shadow: 0 0 30px 15px #9298DD;
-  background-color: #9298DD; }
-
-.p-16 {
-  width: 26px;
-  height: 26px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
-  opacity: 0.2;
   background-color: #FFF6B5; }
 
-.p-17 {
-  width: 3px;
-  height: 3px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
+.p-16 {
+  height: 27px;
+  width: 27px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=20);
   opacity: 0.2;
-  -webkit-box-shadow: 0 0 35px 20px #3CD0D8;
-  -moz-box-shadow: 0 0 35px 20px #3CD0D8;
-  box-shadow: 0 0 35px 20px #3CD0D8;
+  background-color: #9298DD; }
+
+.p-17 {
+  -webkit-box-shadow: 0 0 35px 10px #3CD0D8;
+  -moz-box-shadow: 0 0 35px 10px #3CD0D8;
+  box-shadow: 0 0 35px 10px #3CD0D8;
+  height: 6px;
+  width: 6px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=20);
+  opacity: 0.2;
   background-color: #3CD0D8; }
 
 .p-18 {
-  width: 2px;
+  -webkit-box-shadow: 0 0 2px 6px #F2A4BF;
+  -moz-box-shadow: 0 0 2px 6px #F2A4BF;
+  box-shadow: 0 0 2px 6px #F2A4BF;
   height: 2px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=15);
+  width: 2px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=15);
   opacity: 0.15;
-  -webkit-box-shadow: 0 0 2px 2px #F2A4BF;
-  -moz-box-shadow: 0 0 2px 2px #F2A4BF;
-  box-shadow: 0 0 2px 2px #F2A4BF;
   background-color: #F2A4BF; }
 
 .p-19 {
-  width: 45px;
-  height: 45px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=35);
-  opacity: 0.35;
   -webkit-box-shadow: 0 0 15px 28px #9298DD;
   -moz-box-shadow: 0 0 15px 28px #9298DD;
-  box-shadow: 0 0 15px 8px #9298DD;
+  box-shadow: 0 0 15px 28px #9298DD;
+  height: 45px;
+  width: 45px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=35);
+  opacity: 0.35;
   background-color: #9298DD; }
 
 .p-20 {
-  width: 2px;
-  height: 2px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=45);
-  opacity: 0.45;
   -webkit-box-shadow: 0 0 2px 2px white;
   -moz-box-shadow: 0 0 2px 2px white;
   box-shadow: 0 0 2px 2px white;
-  background-color: #fff; }
+  height: 2px;
+  width: 2px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=45);
+  opacity: 0.45;
+  background-color: white; }
 
 .p-21 {
-  width: 5px;
-  height: 5px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=35);
-  opacity: 0.35;
   -webkit-box-shadow: 0 0 5px 5px #D974DB;
   -moz-box-shadow: 0 0 5px 5px #D974DB;
   box-shadow: 0 0 5px 5px #D974DB;
+  height: 5px;
+  width: 5px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=35);
+  opacity: 0.35;
   background-color: #D974DB; }
 
 .p-22 {
-  width: 108px;
   height: 108px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=45);
+  width: 108px;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+  filter: alpha(opacity=45);
   opacity: 0.45;
   background-color: #FFF6B5; }
 
 .particle-1 {
-  top: 50%;
-  left: 25%; }
+  bottom: 2%;
+  left: 8%; }
 
 .particle-2 {
-  top: 10%;
+  top: 30%;
   right: 27%; }
 
 .particle-3 {
@@ -541,26 +600,20 @@ h1.huge-font {
   bottom: 17%; }
 
 .particle-11 {
-  top: 0px;
-  left: 0;
-  right: 0;
-  bottom: 0; }
+  top: 50%;
+  right: 10%; }
 
 .particle-12 {
-  top: 0px;
-  left: 0;
-  right: 0;
-  bottom: 0; }
+  top: 40%;
+  right: 20%; }
 
 .particle-13 {
-  top: 20px;
-  right: 45px; }
+  bottom: 33%;
+  right: 5%; }
 
 .particle-14 {
-  top: 0px;
-  left: 0;
-  right: 0;
-  bottom: 0; }
+  right: 28%;
+  bottom: 13%; }
 
 .particle-15 {
   top: 0px;
@@ -569,46 +622,32 @@ h1.huge-font {
   bottom: 0; }
 
 .particle-16 {
-  top: 0px;
-  left: 0;
-  right: 0;
-  bottom: 0; }
+  top: 49%;
+  right: 5%; }
 
 .particle-17 {
-  top: 0px;
-  left: 0;
-  right: 0;
-  bottom: 0; }
+  top: 22%;
+  right: 21%; }
 
 .particle-18 {
-  top: 0px;
-  left: 0;
-  right: 0;
-  bottom: 0; }
+  top: 22%;
+  left: 9%; }
 
 .particle-19 {
-  top: 0px;
-  left: 0;
-  right: 0;
-  bottom: 0; }
+  top: 2%;
+  right: 4%; }
 
 .particle-20 {
-  top: 0px;
-  left: 0;
-  right: 0;
-  bottom: 0; }
+  top: 4%;
+  left: 49%; }
 
 .particle-21 {
-  top: 0px;
-  left: 0;
-  right: 0;
-  bottom: 0; }
+  left: 8%;
+  bottom: 4%; }
 
 .particle-22 {
-  top: 0px;
-  left: 0;
-  right: 0;
-  bottom: 0; }
+  top: 3%;
+  left: 12%; }
 
 .main-particle, .particle {
   border-radius: 100%;
@@ -627,5 +666,76 @@ h1.huge-font {
 @media screen and (max-width: 1399px) {
   h1.huge-font {
     font-size: 12em; } }
+@media screen and (max-width: 1199px) {
+  section .container {
+    padding: 60px; } }
+@media screen and (max-width: 767px) {
+  #about, #work {
+    text-align: center; }
+    #about .column, #work .column {
+      padding-bottom: 2em; }
+    #about .img-wrap, #work .img-wrap {
+      margin: 0 auto;
+      left: 0; }
+    #about .img-top, #work .img-top {
+      height: auto !important;
+      width: 100%; }
+    #about .btn-container, #work .btn-container {
+      margin: 0 auto; }
+
+  p {
+    font-size: 1.3em; }
+
+  #skills .is-one-third {
+    padding-bottom: 2em; }
+
+  #work div.project2 .img-wrap {
+    left: 0; } }
+@media screen and (max-width: 599px) {
+  section .container {
+    padding: 30px; } }
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  #intro h1 {
+    font-size: 8em; } }
+@media screen and (max-width: 479px) {
+  #intro h1 {
+    font-size: 6em; }
+  #intro p {
+    font-size: 1.5em; }
+
+  #about .img-wrap, #work .img-wrap {
+    position: relative;
+    width: 100%;
+    left: -10px;
+    height: auto; }
+  #about .img-wrap::before, #work .img-wrap::before {
+    content: "";
+    display: block;
+    padding-top: 100%; }
+  #about .img-bg, #work .img-bg {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    bottom: 0;
+    right: 0; }
+  #about .caption, #work .caption, #about .img-top .blur, #work .img-top .blur, #about .img-top .caption-text, #work .img-top .caption-text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0; }
+  #about .img-top .blur, #work .img-top .blur, #about .img-top .caption-text, #work .img-top .caption-text {
+    height: auto;
+    width: auto; }
+  #about .img-top .caption-text, #work .img-top .caption-text {
+    top: 40%; }
+    #about .img-top .caption-text h1, #work .img-top .caption-text h1 {
+      font-size: 2em; } }
+@media screen and (max-width: 320px) {
+  #intro h1 {
+    font-size: 4em; }
+
+  .img-top .caption-text {
+    top: 30%; } }
 
 /*# sourceMappingURL=styles.css.map */
