--- a/css/styles.scss
+++ b/css/styles.scss
@@ -70,18 +70,26 @@ Mixins
 
 @import "bourbon/bourbon";
 
-@mixin box-shadow($top, $left, $blur, $color, $inset:"") {
-
-      -webkit-box-shadow:$top $left $blur $color #{$inset};
-      -moz-box-shadow:$top $left $blur $color #{$inset};
-      box-shadow:$top $left $blur $color #{$inset};
-    }
 @mixin setBgColor($baseColor) {
     background-color: $baseColor;
     h1.huge-font {
 		color:darken($baseColor, 4%)
 	}
  }
+ @mixin particlesSize($size) {
+    height: $size;
+    width: $size;
+}
+@mixin particlesOpacity($alpha) {
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=$alpha*100)";
+	filter: alpha(opacity=$alpha*100);
+    opacity: $alpha; 
+}
+@mixin particles ($size, $opacity, $color) {
+	@include particlesSize($size);
+	@include particlesOpacity($opacity);
+	background-color:$color;
+}
  
  /*Background Gradient: Top to bottom */
 @mixin bg-gradient ($orientation, $color1, $color2, $color3, $color4, $color5) {
@@ -104,6 +112,12 @@ Mixins
 	-webkit-transform-origin:0% 20%; 
 	-moz-transform-origin:0% 20%;
 	-o-transform-origin:0% 20%;
+}
+
+@mixin box-shadow($top, $left, $blur, $spread, $color) {
+    -webkit-box-shadow: $top $left $blur $spread $color;
+    -moz-box-shadow: $top $left $blur $spread $color;
+    box-shadow: $top $left $blur $spread $color;
 }
 /*
 ===========================
@@ -163,6 +177,18 @@ h2 {
 }
 .absolute {
     position:absolute;
+}
+.push {
+	left:100%;
+}
+.pull {
+	right:100%;
+}
+.is-right {
+	order:2;
+}
+.is-left {
+	order:1;
 }
 a.btn {
 		span {
@@ -230,25 +256,32 @@ h1.huge-font {
 		img {
 			padding-top:2em;
 		}
+		h1 {
+			line-height:1;
+		}
+		
 }
 #about {
 	@include setBgColor(white);
 	color:#999;
 	.img-wrap {
-		width: 100%;
-		left:6vh;
+		height:400px;
+		Width:400px;
+		left:0;
         position:relative;
 	}
 	.img-bg {
 		background-image: linear-gradient(-45deg, #FFF6A8 0%, #f3c08e 25%, #e098a9 50%, #8d93d2 75%, #3bcbd2 100%);
-		height:400px;
-		Width:400px;
+		width:100%;
+		height:100%;
 		position:absolute;
 		z-index:1;
 		left:20px;
 		top:20px;
 	}
 	.img-top {
+		width:100%;
+		height:100%;
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -257,12 +290,30 @@ h1.huge-font {
 	.btn-container {
 		margin-top:1em;
 		position:relative;
+		width:206px;
 	}
 	.btn-background {
 		position:relative;
 		background:url(../img/icon-6.png) no-repeat;
 		height:100px;
 		margin-top:1.2em;
+		margin-right:auto;
+		margin-left:auto;
+	}
+	.column.text {
+		    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    min-height: 24em;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
 	}
 	
 }
@@ -306,9 +357,15 @@ h1.huge-font {
 		position:relative;
 
 	}
+	.column.text h3 {
+		font: {
+			family:$display;
+			size:2em;
+		}
+		padding-bottom:0.7em;
+	}
 	div.project2 .img-wrap {
-		width: 100%;
-        right:6vh;
+        left:12vh;
 	}
     .columns {
         min-height:500px;
@@ -330,7 +387,6 @@ h1.huge-font {
 			color:$pink;
 		}
 	}
-	
 }
 .img-top {
 	&:hover .caption{
@@ -391,221 +447,95 @@ h1.huge-font {
 }
 
 .p-1 {
-    width: 10px;
-    height: 10px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
-    opacity: 0.2;
-    -webkit-box-shadow: 0 0 50px 30px $apricot;
-    -moz-box-shadow: 0 0 50px 30px $apricot;
-    box-shadow: 0 0 50px 30px $apricot;
-	background-color: $apricot;
+	@include box-shadow(0, 0, 30px, 30px, $apricot);
+	@include particles(10px, 0.2, $apricot);
 }
 .p-2 {
-    width: 154px;
-    height: 154px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=15);
-    opacity: 0.15;
-    -webkit-box-shadow: 0 0 50px 30px $violet;
-    -moz-box-shadow: 0 0 50px 30px $violet;
-    box-shadow: 0 0 50px 30px $violet;
-	background-color: $violet;
+	@include box-shadow(0, 0, 25px, 15px, $violet);
+	@include particles(155px, 0.15, $violet);
 }
-.p-2 {
-    width: 154px;
-    height: 154px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=15);
-    opacity: 0.15;
-    -webkit-box-shadow: 0 0 50px 30px $orchid;
-    -moz-box-shadow: 0 0 50px 30px $orchid;
-    box-shadow: 0 0 50px 30px $orchid;
-	background-color: $orchid;
+.p-3 {
+	@include box-shadow(0, 0, 15px, 15px, $orchid);
+	@include particles(128px, 0.25, $orchid);
 }
 .p-4 {
-    width: 90px;
-    height: 90px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=25);
-    opacity: 0.25;
-    -webkit-box-shadow: 0 0 40px 30px $turquoise;
-    -moz-box-shadow: 0 0 40px 30px $turquoise;
-    box-shadow: 0 0 40px 30px $turquoise;
-	background-color: $turquoise;
+	@include box-shadow(0, 0, 40px, 30px, $turquoise);
+	@include particles(100px, 0.25, $turquoise);
 }
 .p-5 {
-    width: 55px;
-    height: 55px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=10);
-    opacity: 0.1;
-    -webkit-box-shadow: 0 0 10px 20px $pink;
-    -moz-box-shadow: 0 0 10px 20px $pink;
-    box-shadow: 0 0 10px 20px $pink;
-	background-color: $pink;
+	@include box-shadow(0, 0, 10px, 20px, $pink);
+	@include particles(55px, 0.2, $pink);
 }
 .p-6 {
-    width: 52px;
-    height: 52px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
-    opacity: 0.2;
-	background-color: $canary;
+	@include particles(52px, 0.35, $canary);
 }
 .p-7 {
-    width: 30px;
-    height: 30px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
-    opacity: 0.2;
-    -webkit-box-shadow: 0 0 2px 3px apricot;
-    -moz-box-shadow: 0 0 2px 3px apricot;
-    box-shadow: 0 0 2px 3px apricot;
-	background-color: $apricot;
+	@include box-shadow(0, 0, 2px, 7px, $apricot);
+	@include particles(32px, 0.2, $apricot);
 }
 .p-8 {
-    width: 5px;
-    height: 5px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=10);
-    opacity: 0.1;
-    -webkit-box-shadow: 0 0 30px 17px $pink;
-    -moz-box-shadow: 0 0 30px 17px $pink;
-    box-shadow: 0 0 30px 17px $pink;
-	background-color: $pink;
+	@include box-shadow(0, 0, 5px, 17px, $pink);
+	@include particles(7px, 0.15, $pink);
 }
 .p-9 {
-    width: 60px;
-    height: 60px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=10);
-    opacity: 0.1;
-    -webkit-box-shadow: 0 0 1px 1px $violet;
-    -moz-box-shadow: 0 0 1px 1px $violet;
-    box-shadow: 0 0 1px 1px $violet;
-	background-color: $violet;
+	@include box-shadow(0, 0, 2px, 2px, $turquoise);
+	@include particles(58px, 0.15, $turquoise);
 }.p-10 {
-    width: 1px;
-    height: 1px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
-    opacity: 0.2;
-    -webkit-box-shadow: 0 0 10px 5px $canary;
-    -moz-box-shadow: 0 0 10px 5px $canary;
-    box-shadow: 0 0 10px 5px $canary;
-	background-color: $canary;
+	@include box-shadow(0, 0, 10px, 5px, $canary);
+	@include particles(3px, 0.45, $canary);
 }
 .p-11 {
-    width: 159px;
-    height: 159px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=10);
-    opacity: 0.1;
-    -webkit-box-shadow: 0 0 1px 0px white;
-    -moz-box-shadow: 0 0 1px 0px white;
-    box-shadow: 0 0 1px 0px white;
-	background-color: #fff;
+	@include box-shadow(0, 0, 1px, 1px, white);
+	@include particles(159px, 0.1, white);
 }
 .p-12 {
-    width: 10px;
-    height: 10px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=8);
-    opacity: 0.08;
-    -webkit-box-shadow: 0 0 30px 20px white;
-    -moz-box-shadow: 0 0 30px 20px white;
-    box-shadow: 0 0 30px 20px white;
-	background-color: #fff;
+	@include box-shadow(0, 0, 10px, 20px, white);
+	@include particles(10px, 0.3, white);
 }
 .p-13 {
-    width: 80px;
-    height: 80px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=8);
-    opacity: 0.08;
-    -webkit-box-shadow: 0 0 1px 1px $pink;
-    -moz-box-shadow: 0 0 1px 1px $pink;
-    box-shadow: 0 0 1px 1px $pink;
-	background-color: $pink;
+	@include box-shadow(0, 0, 5px, 5px, $pink);
+	@include particles(80px, 0.15, $pink);
 }
 .p-14 {
-    width: 50px;
-    height: 50px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
-    opacity: 0.2;
-    -webkit-box-shadow: 0 0 30px 15px $turquoise;
-    -moz-box-shadow: 0 0 30px 15px $turquoise;
-    box-shadow: 0 0 30px 15px $turquoise;
-	background-color: $turquoise;
+	@include box-shadow(0, 0, 30px, 15px, $turquoise);
+	@include particles(48px, 0.15, $turquoise);
 }
 .p-15 {
-    width: 235px;
-    height: 235px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=5);
-    opacity: 0.05;
-    -webkit-box-shadow: 0 0 30px 15px $violet;
-    -moz-box-shadow: 0 0 30px 15px $violet;
-    box-shadow: 0 0 30px 15px $violet;
-	background-color: $violet;
+	@include box-shadow(0, 0, 30px, 18px, $canary);
+	@include particles(5px, 0.05, $canary);
 }
 .p-16 {
-    width: 26px;
-    height: 26px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
-    opacity: 0.2;
-	background-color: $canary;
+	@include particles(27px, 0.2, $violet);
 }
 .p-17 {
-    width: 3px;
-    height: 3px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
-    opacity: 0.2;
-    -webkit-box-shadow: 0 0 35px 20px $turquoise;
-    -moz-box-shadow: 0 0 35px 20px $turquoise;
-    box-shadow: 0 0 35px 20px $turquoise;
-	background-color: $turquoise;
+	@include box-shadow(0, 0, 35px, 10px, $turquoise);
+	@include particles(6px, 0.2, $turquoise);
 }
 .p-18 {
-    width: 2px;
-    height: 2px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=15);
-    opacity: 0.15;
-    -webkit-box-shadow: 0 0 2px 2px $pink;
-    -moz-box-shadow: 0 0 2px 2px $pink;
-    box-shadow: 0 0 2px 2px $pink;
-	background-color: $pink;
+	@include box-shadow(0, 0, 2px, 6px, $pink);
+	@include particles(2px, 0.15, $pink);
 }
 .p-19 {
-    width: 45px;
-    height: 45px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=35);
-    opacity: 0.35;
-    -webkit-box-shadow: 0 0 15px 28px $violet;
-    -moz-box-shadow: 0 0 15px 28px $violet;
-    box-shadow: 0 0 15px 8px $violet;
-	background-color: $violet;
+	@include box-shadow(0, 0, 15px, 28px, $violet);
+	@include particles(45px, 0.35, $violet);
 }
 .p-20 {
-    width: 2px;
-    height: 2px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=45);
-    opacity: 0.45;
-    -webkit-box-shadow: 0 0 2px 2px white;
-    -moz-box-shadow: 0 0 2px 2px white;
-    box-shadow: 0 0 2px 2px white;
-	background-color: #fff;
+	@include box-shadow(0, 0, 2px, 2px, white);
+	@include particles(2px, 0.45, white);
 }
 .p-21 {
-    width: 5px;
-    height: 5px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=35);
-    opacity: 0.35;
-    -webkit-box-shadow:  0 0 5px 5px $orchid;
-    -moz-box-shadow:  0 0 5px 5px $orchid;
-    box-shadow:  0 0 5px 5px $orchid;
-	background-color: $orchid;
+	@include box-shadow(0, 0, 5px, 5px, $orchid);
+	@include particles(5px, 0.35, $orchid);
 }
 .p-22 {
-    width: 108px;
-    height: 108px;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=45);
-    opacity: 0.45;
-	background-color: $canary;
+	@include particles(108px, 0.45, $canary);
 }
 .particle-1 {
-    top:50%;
-    left:25%;
+    bottom:2%;
+    left:8%;
 }
 .particle-2 {
-    top:10%;
+    top:30%;
     right:27%;
 }
 .particle-3 {
@@ -631,7 +561,6 @@ h1.huge-font {
 .particle-8 {
     top:48%;
     left:26%;
-
 }
 .particle-9 {
     top:2%;
@@ -642,26 +571,20 @@ h1.huge-font {
     bottom:17%;
 }
 .particle-11 {
-    top:0px;
-    left:0;
-    right:0;
-    bottom:0;
+    top:50%;
+    right:10%;
 }
 .particle-12 {
-    top:0px;
-    left:0;
-    right:0;
-    bottom:0;
+    top:40%;
+    right:20%;
 }
 .particle-13 {
-    top:20px;
-    right:45px;
+    bottom:33%;
+    right:5%;
 }
 .particle-14 {
-    top:0px;
-    left:0;
-    right:0;
-    bottom:0;
+  right: 28%;
+  bottom: 13%;
 }
 .particle-15 {
     top:0px;
@@ -670,46 +593,32 @@ h1.huge-font {
     bottom:0;
 }
 .particle-16 {
-    top:0px;
-    left:0;
-    right:0;
-    bottom:0;
+    top:49%;
+    right:5%;
 }
 .particle-17 {
-    top:0px;
-    left:0;
-    right:0;
-    bottom:0;
+    top:22%;
+    right:21%;
 }
 .particle-18 {
-    top:0px;
-    left:0;
-    right:0;
-    bottom:0;
+    top:22%;
+    left:9%;
 }
 .particle-19 {
-    top:0px;
-    left:0;
-    right:0;
-    bottom:0;
+    top:2%;
+    right:4%;
 }
 .particle-20 {
-    top:0px;
-    left:0;
-    right:0;
-    bottom:0;
+    top:4%;
+    left:49%
 }
 .particle-21 {
-    top:0px;
-    left:0;
-    right:0;
-    bottom:0;
+    left:8%;
+    bottom:4%;
 }
 .particle-22 {
-    top:0px;
-    left:0;
-    right:0;
-    bottom:0;
+    top:3%;
+    left:12%;
 }
 .main-particle {
     border-radius: 100%;
@@ -732,11 +641,11 @@ h1.huge-font {
 
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1200px) and (max-width: 1399px){
 
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
 
 }
 
@@ -747,13 +656,112 @@ h1.huge-font {
 }
 
 @media screen and (max-width: 1199px) {
+section .container {
+	padding:60px;
+}
+}
+@media screen and (max-width: 767px)  {
+	#about {
+		text-align:center;
+		.column {
+			padding-bottom:2em;
+		}
+		.img-wrap {
+			margin:0 auto;
+			left:0;
+		}
+		.img-top {
+			height:auto!important;
+			width:100%;
+		}
+		.btn-container {
+			margin:0 auto;
+		}
+	}
+	p {
+		font-size:1.3em;
+	}
+	#skills .is-one-third {
+		padding-bottom:2em;
+	}
+	#work div.project2 .img-wrap {
+    	left:0;
+}
+}
+
+@media screen and (min-width: 599px) and (max-width: 767px) {
+
+}
+@media screen and (max-width: 599px) {
+	section .container {
+		padding:30px;
+	}
+
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  #intro h1 {
+	  font-size:8em;
+  }
 
 }
 
-@media screen and (max-width: 767px) {
-  
-}
+@media screen and (min-width: 320px) and (max-width: 479px){
 
+}
+@media screen and (max-width: 479px) {
+	#intro {
+		h1 {
+		  font-size:6em;
+		}
+		p {
+			font-size:1.5em;
+		}
+	}
+	
+	#about {
+		.img-wrap {
+			position: relative;
+			width: 100%;
+			left:-10px;
+			height:auto;
+		}
+		.img-wrap::before {
+			content: "";
+			display: block;
+			padding-top: 100%;
+		}
+		.img-bg {
+			position:  absolute;
+			top: 20px;
+			left: 20px;
+			bottom: 0;
+			right: 0;
+		}
+		.caption, .img-top .blur, .img-top .caption-text {
+			position:  absolute;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+		}
+		.img-top .blur, .img-top .caption-text{
+			height:auto;
+			width:auto;
+		}
+		 .img-top .caption-text {
+			top:40%;
+		 	h1 {
+  			  font-size: 2em;
+			}
+		 }
+	}
+}
 @media screen and (max-width: 320px) {
-  
+    #intro h1 {
+	  font-size:4em;
+  }
+  .img-top .caption-text {
+			top:30%;
+  }
+
 }
